# blueprint-computer-vision-python

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
